--- a/zomato.html
+++ b/zomato.html
@@ -6,6 +6,8 @@
     <title>Zomato</title>
     <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/020/336/052/small/zomato-logo-zomato-icon-free-free-vector.jpg">
     <link rel="stylesheet" href="./style.css">
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 <header>
@@ -32,7 +34,17 @@
             <img class="zomato-logo" src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png" alt="">
             <p class="header-body-section-discover">Discover the best food & drinks in Chennai</p>
         <div class="search-container">
-            
+            <div class="detectionlocation">
+                <i class="fa-solid fa-location-dot location-map"></i>
+                <input type="text" placeholder="Chennai"/>
+                <i class="fa-sharp fa-solid fa-caret-down caret-up"></i>
+            </div>
+            <div class="line">|</div>
+            <div class="search-item">
+                <i class="fa-solid fa-magnifying-glass"></i>
+<input type=" text" placeholder="Search for restaurant,cuisine or a dish">
+
+            </div>
         </div>
             </div>
         </div>
