--- a/zomato.html
+++ b/zomato.html
@@ -51,5 +51,31 @@
     </div>
     
 </header>
+<section class="section-1">
+    <div class="container container-feature">
+        <div class="features">
+            <div class="feature-image">
+                <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="">
+            </div>
+            <h3>Order Online</h3>
+            <p>stay home and order to your doorstep</p>
+        </div>
+        <div class="features">
+            <div class="feature-image">
+                <img src="https://b.zmtcdn.com/webFrontend/d026b357feb0d63c997549f6398da8cc1647364915.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="">
+            </div>
+            <h3>Dining</h3>
+            <p>View the city's favourite dining venues</p>
+        </div>
+        <div class="features">
+            <div class="feature-image">
+                <img src="https://b.zmtcdn.com/webFrontend/d9d80ef91cb552e3fdfadb3d4f4379761647365057.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="">
+            </div>
+            <h3>Nightlife and Clubs</h3>
+            <p>Explore the city's top nightlife outlets</p>
+        </div>
+
+    </div>
+</section>
 </body>
 </html>
