--- a/zomato.html
+++ b/zomato.html
@@ -77,5 +77,48 @@
 
     </div>
 </section>
+<section class="section-2">
+    <div class="section-2-top container">
+        <div class="section-2-left">
+            <h1>Collection</h1>
+            <p>Explore curated lists of top restaurants, cafes, pubs, and bars in Chennai, based on trends</p>
+        </div>
+        <div class="section-2-right">
+            <P>All collection in Chennai <i class="fa-sharp fa-solid fa-caret-right"></i></P>
+        </div>
+    </div>
+
+    <div class="section-2-body container">
+        <div class="section-2-item">
+            <img src="https://b.zmtcdn.com/data/collections/7771cf3a18e1da2916794d3998260c69_1709812319.png?output-format=webp" alt="">
+            <div class="section-2-image-describition">
+                <p>Romantic Dining</p>
+                <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
+            </div>
+        </div>
+
+        <div class="section-2-item">
+            <img src="https://b.zmtcdn.com/data/collections/2748683d9ae0c00e80ba4701e2545f66_1709815454.png?output-format=webp" alt="">
+            <div class="section-2-image-describition">
+                <p>Sea View Dining</p>
+                <p>10 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
+            </div>
+        </div>
+        <div class="section-2-item">
+            <img src="https://b.zmtcdn.com/data/collections/fbd237478a5d3b6ea08de83c30230cdd_1709881769.png?output-format=webp" alt="">
+            <div class="section-2-image-describition">
+                <p>Best Insta-worthy place</p>
+                <p>11 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
+            </div>
+        </div>
+        <div class="section-2-item">
+            <img src="https://b.zmtcdn.com/data/collections/757a7716d0478d646babef06ed7e8e2b_1709814818.png?output-format=webp" alt="">
+            <div class="section-2-image-describition">
+                <p>Best Buffets in Town</p>
+                <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
+            </div>
+        </div>
+</div>
+</section>
 </body>
 </html>
