--- a/zomato.html
+++ b/zomato.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <div class="image-container">
-        <img src="https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSacW6_FgJjB07Gl4OKF02REftLxy3nMATl0x4ho4CrPj-C5OVcrObqcXbHO2KEhs_wRGM&usqp=CAU" alt="">
     </div>
     <div class="header-body-section">
         <nav class="nav">
