--- a/zomato.html
+++ b/zomato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Majin Ravi</title>
+    <title>BEHIND THE WHEEL</title>
     <link rel="icon" href="https://www.team-bhp.com/sites/default/files/styles/amp_high_res/public/motorcycle-ai-1.jpg">
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -17,7 +17,7 @@
                      </div>
                      <ul>
                          <li><a href="./login.html" target="blank">Log in</a></li>
-                         <li><a href="signup" target="blank">Sign Up</a></li>
+                         <li><a href="./about.html" target="blank">About</a></li>
                      </ul>
                      </div>
                  </nav>
