--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-      <title>HTML Login Form</title>
+      <title>Login</title>
       <link rel="stylesheet" href="./style1.css">
 </head>
 
