--- a/dining.html
+++ b/dining.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dining</title>
     <link rel="icon" href="./d-img.avif">
-    <link rel="stylesheet" href="./three.css">
+    <link rel="stylesheet" href="./style3.css">
     <!--font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -40,14 +40,14 @@
                 </div>
             </div>
             <div class="section-1-item">
-                <img src="./image/garden.img" alt="">
+                <img src="./garden.jpg" alt="">
                 <div class="section-1-image-describition">
                     <p>THE GARDEN OF EAT'S</p>
                     <p>10 <i class="fa-sharp fa-solid fa-sort-down"></i></p>
                 </div>
             </div>
             <div class="section-1-item">
-                <img src="./image/hero-shot.jpg" alt="">
+                <img src="./hero-shot.jpg" alt="">
                 <div class="section-1-image-describition">
                     <p>THE FLYING ELEPHANT</p>
                     <p>10 place <i class="fa-sharp fa-solid fa-sort-down"></i></p>
