--- a/night.html
+++ b/night.html
@@ -20,28 +20,28 @@
         </div>
         <div class="section-2-body container">
             <div class="section-2-item">
-                <img src="https://b.zmtcdn.com/data/collections/7771cf3a18e1da2916794d3998260c69_1709812319.png?output-format=webp" alt="">
+                <img src="./hip.jpg" alt="">
                 <div class="section-2-image-describition">
                     <p>Romantic Dining</p>
                     <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
                 </div>
             </div>
             <div class="section-2-item">
-                <img src="https://b.zmtcdn.com/data/collections/7771cf3a18e1da2916794d3998260c69_1709812319.png?output-format=webp" alt="">
+                <img src="./club.jpg" alt="">
                 <div class="section-2-image-describition">
                     <p>Romantic Dining</p>
                     <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
                 </div>
             </div>
             <div class="section-2-item">
-                <img src="https://b.zmtcdn.com/data/collections/7771cf3a18e1da2916794d3998260c69_1709812319.png?output-format=webp" alt="">
+                <img src="./disco.jpg" alt="">
                 <div class="section-2-image-describition">
                     <p>Romantic Dining</p>
                     <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
                 </div>
             </div>
             <div class="section-2-item">
-                <img src="https://b.zmtcdn.com/data/collections/7771cf3a18e1da2916794d3998260c69_1709812319.png?output-format=webp" alt="">
+                <img src="./hop.jpg" alt="">
                 <div class="section-2-image-describition">
                     <p>Romantic Dining</p>
                     <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
