--- a/dining.html
+++ b/dining.html
@@ -43,7 +43,7 @@
                 <img src="./garden.jpg" alt="">
                 <div class="section-1-image-describition">
                     <p>THE GARDEN OF EAT'S</p>
-                    <p>10 <i class="fa-sharp fa-solid fa-sort-down"></i></p>
+                    <p>10 place <i class="fa-sharp fa-solid fa-sort-down"></i></p>
                 </div>
             </div>
             <div class="section-1-item">
