--- a/night.html
+++ b/night.html
@@ -6,12 +6,13 @@
     <title>Nightlife and Clubs</title>
     <link rel="icon" href="./n-img.webp">
     <link rel="stylesheet" href="./style4.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <section class="section-2">
         <div class="section-2-top container">
             <div class="section-2-left">
-                <h1>Collection</h1>
+                <h1>Collection</h1><br>
                 <p>Explore curated lists of top pubs, and bars in Chennai, based on trends</p>
             </div>
             <div class="section-2-right">
@@ -22,28 +23,28 @@
             <div class="section-2-item">
                 <img src="./hip.jpg" alt="">
                 <div class="section-2-image-describition">
-                    <p>Romantic Dining</p>
+                    <p>Mid Club</p>
                     <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
                 </div>
             </div>
             <div class="section-2-item">
                 <img src="./club.jpg" alt="">
                 <div class="section-2-image-describition">
-                    <p>Romantic Dining</p>
+                    <p>Moonlight</p>
                     <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
                 </div>
             </div>
             <div class="section-2-item">
                 <img src="./disco.jpg" alt="">
                 <div class="section-2-image-describition">
-                    <p>Romantic Dining</p>
+                    <p>Luminous Dark </p>
                     <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
                 </div>
             </div>
             <div class="section-2-item">
                 <img src="./hop.jpg" alt="">
                 <div class="section-2-image-describition">
-                    <p>Romantic Dining</p>
+                    <p>Day Night</p>
                     <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
                 </div>
             </div>
