para little changed

--- a/night.html
+++ b/night.html
@@ -13,7 +13,7 @@
         <div class="section-2-top container">
             <div class="section-2-left">
                 <h1>Collection</h1><br>
-                <p>Explore curated lists of top pubs, and bars in Chennai, based on trends</p>
+                <p>Explore lists of top pubs, and bars in Chennai, based on trends</p>
             </div>
             <div class="section-2-right">
                 <P>All collection in Chennai <i class="fa-sharp fa-solid fa-caret-right"></i></P>
