--- a/zomato.html
+++ b/zomato.html
@@ -13,7 +13,7 @@
                  <nav class="nav">
                      <div class="container container-nav">
                          <div class="logocontainer">
-                           <p>Welcome To Our Food Delivery and Restaurant Booking Service!</p>
+                           <p>Welcome To Our Food Delivery Service!</p>
                      </div>
                      <ul>
                          <li><a href="./login.html" >Log in</a></li>
