--- a/dining.html
+++ b/dining.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dessert</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style3.css">
 </head>
 <body>
   <header>
@@ -41,7 +41,7 @@
       </div>
       <div class="hot-coffees">
         <div class="hot-coffees-image">
-          <img src="https://cdn.britannica.com/50/80550-050-5D392AC7/Scoops-kinds-ice-cream.jpg" alt="">
+          <img src="https://5.imimg.com/data5/XV/JL/MY-49967943/indian-mithais-premium-quality-assorted.jpg" alt="">
         </div>
         <div class="hot-coffees-body">
           <h2>sweets</h2>
@@ -50,7 +50,7 @@
       </div>
       <div class="hot-coffees">
         <div class="hot-coffees-image">
-          <img src="https://cdn.britannica.com/50/80550-050-5D392AC7/Scoops-kinds-ice-cream.jpg" alt="">
+          <img src="https://content.jdmagicbox.com/comp/chennai/g9/044pxx44.xx44.190216175534.j9g9/catalogue/cake-square-chennai-fjuypl7fob.jpg" alt="">
         </div>
         <div class="hot-coffees-body">
           <h2>cakes</h2>
