--- a/zomato.html
+++ b/zomato.html
@@ -41,7 +41,7 @@
                          <p>View the city's Favourite dining venues </p>
                          <div class="y">
                              <button type="button">
-                                 <a href="./dining.html" > Dining</a>
+                                 <a href="./dining.html" > Dessert</a>
                              </button>
                          </div>
      
