change order page

--- a/order.html
+++ b/order.html
@@ -33,7 +33,7 @@
                 <img class="card-image" src="./assets/Briyani.avif" alt="Briyani Image">
                     <div class="card-detail">
                         <h4>Briyani <span>Rs:210</span></h4>
-                        <p>lorem ipsum dolor  sit</p>
+                        <p>Chicken,Mutton,Beef</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -41,7 +41,7 @@
                 <img class="card-image" src="./assets/burger.jpg" alt="Burger Image">
                     <div class="card-detail">
                         <h4>Burger <span>Rs:110</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Lamb,Chicken,Specialty,Cheese,Bacon</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -49,7 +49,7 @@
                 <img class="card-image" src="./assets/cake.jpg" alt="Cake Image">
                     <div class="card-detail">
                         <h4>Cake <span>Rs:60</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Butter,Pound,Sponge,Carrot,Red Velvet</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
              </div>
@@ -57,7 +57,7 @@
                 <img class="card-image" src="./assets/chicken.jpg" alt="Chicken Image">
                     <div class="card-detail">
                         <h4>Chicken <span>Rs:420</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Curry Recipe,Madras Curry,Kathi Roll,Garlic</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -65,7 +65,7 @@
                 <img class="card-image" src="./assets/dosa.jpg" alt="Dosa Image">
                     <div class="card-detail">
                         <h4>Dosa <span>Rs:70</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Set Dosa,Cheese Dosa,Adai Dosa</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -73,7 +73,7 @@
                 <img class="card-image" src="./assets/friedrice.avif" alt="Friedrice Image">
                     <div class="card-detail">
                         <h4>Friedrice<span>Rs:150</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Ginger,Beef,Garlicky,Chilli</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -81,7 +81,7 @@
                 <img class="card-image" src="./assets/noodles.avif" alt="Noodles Image">
                     <div class="card-detail">
                         <h4>Noodels<span>Rs:200</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Egg,Pasta,Biangbiang,Ramen</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -89,7 +89,7 @@
                 <img class="card-image" src="./assets/northindian.avif" alt="Northindian Image">
                     <div class="card-detail">
                         <h4>Northindian<span>Rs:350</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Butter Chicken,Da;,Aloo Puri,Malai</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -97,7 +97,7 @@
                 <img class="card-image" src="./assets/paratha.avif" alt="Paratha Image">
                     <div class="card-detail">
                         <h4>Paratha<span>Rs:150</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Aloo,,Paneer,Gobi,MooliGreen Peas,Broccoli</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -105,7 +105,7 @@
                 <img class="card-image" src="./assets/pizza.avif" alt="Pizza Image">
                     <div class="card-detail">
                         <h4>Pizza<span>Rs:320</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Cheese,Farm House,Peppy Paneer,Deluxe Veggie</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -113,7 +113,7 @@
                 <img class="card-image" src="./assets/rolls.avif" alt="Rolls Image">
                     <div class="card-detail">
                         <h4>Rolls<span>Rs:180</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Chilli,Pizza,Cheese Corn,Panner Tikka,Spicy</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -121,7 +121,7 @@
                 <img class="card-image" src="./assets/thali.avif" alt="Thali Image">
                     <div class="card-detail">
                         <h4>Thali<span>Rs:350</span></h4>
-                        <p>lorem ipsum dolor</p>
+                        <p>Kerala,Karnataka,Maharashtrian,Kathiawadi</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
