--- a/night.html
+++ b/night.html
@@ -1,56 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nightlife and Clubs</title>
-    <link rel="icon" href="./n-img.webp">
+    <title>coffee</title>
     <link rel="stylesheet" href="./style4.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
-    <section class="section-2">
-        <div class="section-2-top container">
-            <div class="section-2-left">
-                <h1>Collection</h1><br>
-                <p>Explore lists of top pubs, and bars in Chennai, based on trends</p>
+    <header>
+        <div class="logo">
+            <a href="#">cof<span>fee</span></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#menu">menu</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="content">
+        <h2>coffee</h2>
+        <p>would you like to start the day with a nice coffee?</p>
+    </div>
+    <div class="menu" id="menu">
+        <div class="menu-header">
+
+            <h4>coffee menu</h4>
+        </div>
+        <div class="card-contents">
+            <div class="hot-coffees">
+                <div class="cold-coffees-image">
+                    <img src="./image/hot coffee (2).jpg" alt="">
+                    <div class="card-contents-lines">
+                        <h2 style="padding-top: 1rem;"><a href="https://www.cafecoffeeday.com/">HOT COFFEE</a></h2>
+                        <labal>You can't buy happiness, but you can buy coffee, and that's pretty close.</labal>
+                    </div>
+                </div>
             </div>
-            <div class="section-2-right">
-                <P>All collection in Chennai <i class="fa-sharp fa-solid fa-caret-right"></i></P>
+            <div class="hot-coffees">
+                <div class="frappucino-coffees-image">
+                    <img src="./image/cold coffee.jpg" alt="">
+                    <div class="card-contents-lines">
+                        <h2 style="padding-top: 3.5rem;"><a href="https://bluetokaicoffee.com/">COLD COFFEE </a></h2>
+                        <labal>You can't buy happiness, but you can buy coffee, and that's pretty close.</labal>
+                    </div>
+                </div>
+            </div>
+            <div class="hot-coffees">
+                <div class="frappucino-coffees-image">
+                    <img src="./image/frappucino coffee.jpg" alt="">
+                </div>
+                <div class="card-contents-lines">
+                    <h2 style="padding-top: 1rem;"><a href="https://thekacoffee.com/">FRAPPUCINO-COFFEE</a></h2>
+                    <labal>You can't buy happiness, but you can buy coffee, and that's pretty close.
+                    </labal>
+                </div>
             </div>
         </div>
-        <div class="section-2-body container">
-            <div class="section-2-item">
-                <img src="./hip.jpg" alt="">
-                <div class="section-2-image-description">
-                    <p>Mid Club</p>
-                    <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
-                </div>
-            </div>
-            <div class="section-2-item">
-                <img src="./club.jpg" alt="">
-                <div class="section-2-image-description">
-                    <p>Moonlight</p>
-                    <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
-                </div>
-            </div>
-            <div class="section-2-item">
-                <img src="./disco.jpg" alt="">
-                <div class="section-2-image-description">
-                    <p>Luminous Dark </p>
-                    <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
-                </div>
-            </div>
-            <div class="section-2-item">
-                <img src="./hop.jpg" alt="">
-                <div class="section-2-image-description">
-                    <p>Day Night</p>
-                    <p>15 place <i class="fa-sharp fa-solid fa-caret-right"></i></p>
+    </div>
+    </div>
+    <div id="menu">
+        <h1 id="section">MENU</h1>
+        <div id="menu-row">
+            <div id="menu-col">
+                <h2>MORNING</h2>
+                <div class="box">
+                    <div id="image">
+                        <img src="./image/flat-white.jpg">
+                    </div>
+                    <h3>cash</h3>
+                    <h4>10$</h4>
                 </div>
             </div>
         </div>
 
-    </section>
 </body>
+
 </html>
