--- a/night.html
+++ b/night.html
@@ -31,7 +31,7 @@
         <div class="card-contents">
             <div class="hot-coffees">
                 <div class="cold-coffees-image">
-                    <img src="./image/hot coffee (2).jpg" alt="">
+                    <img src="./assets/hot coffee (2).jpg" alt="">
                     <div class="card-contents-lines">
                         <h2 style="padding-top: 1rem;"><a href="https://www.cafecoffeeday.com/">HOT COFFEE</a></h2>
                         <labal>You can't buy happiness, but you can buy coffee, and that's pretty close.</labal>
@@ -40,7 +40,7 @@
             </div>
             <div class="hot-coffees">
                 <div class="frappucino-coffees-image">
-                    <img src="./image/cold coffee.jpg" alt="">
+                    <img src="./assets/cold coffee.jpg" alt="">
                     <div class="card-contents-lines">
                         <h2 style="padding-top: 3.5rem;"><a href="https://bluetokaicoffee.com/">COLD COFFEE </a></h2>
                         <labal>You can't buy happiness, but you can buy coffee, and that's pretty close.</labal>
@@ -49,7 +49,7 @@
             </div>
             <div class="hot-coffees">
                 <div class="frappucino-coffees-image">
-                    <img src="./image/frappucino coffee.jpg" alt="">
+                    <img src="./assets/frappucino coffee.jpg" alt="">
                 </div>
                 <div class="card-contents-lines">
                     <h2 style="padding-top: 1rem;"><a href="https://thekacoffee.com/">FRAPPUCINO-COFFEE</a></h2>
@@ -64,10 +64,10 @@
         <h1 id="section">MENU</h1>
         <div id="menu-row">
             <div id="menu-col">
-                <h2>MORNING</h2>
+                <h2>MORNING&EVENING</h2>
                 <div class="box">
                     <div id="image">
-                        <img src="./image/flat-white.jpg">
+                        <img src="./assets/flat-white.jpg">
                     </div>
                     <h3>cash</h3>
                     <h4>10$</h4>
