--- a/zomato.html
+++ b/zomato.html
@@ -50,10 +50,10 @@
                  </section>
                  <section>
                      <div class="x2">
-                         <p>Explore the city's top nightlife outlets</p>
+                         <p>Explore the city's top coffee outlets</p>
                          <div class="y">
                              <button type="button">
-                                 <a href="night.html"> Nightlife and Clubs</a>
+                                 <a href="night.html"> nutural cafe</a>
                              </button>
                          </div>
      
