--- a/zomato.html
+++ b/zomato.html
@@ -28,7 +28,7 @@
                      <p> Stay Home and Order to your doorstep</p>
                          <div class="y">
                              <button type="button">
-                                 <a href="./order.html" > Orderonline</a>
+                                 <a href="./order.html" > Order online</a>
                              </button>
                          </div>
      
@@ -53,7 +53,7 @@
                          <p>Explore the city's top coffee outlets</p>
                          <div class="y">
                              <button type="button">
-                                 <a href="night.html"> nutural cafe</a>
+                                 <a href="night.html"> Natural cafe</a>
                              </button>
                          </div>
      
