--- a/order.html
+++ b/order.html
@@ -121,7 +121,7 @@
                 <img class="card-image" src="./assets/thali.avif" alt="Thali Image">
                     <div class="card-detail">
                         <h4>Thali<span>Rs:350</span></h4>
-                        <p>Kerala,Karnataka,Maharashtrian,Kathiawadi</p>
+                        <p>Kerala,Karnataka,Maharashtrian</p>
                         <p class="card-time">🕛15-30 min</p>
                     </div>
             </div>
@@ -129,7 +129,7 @@
     </div>
       
 <!-- order dashboard     -->
- <div class="dashboard-order">
+<div class="dashboard-order">
     <h3>Order Menu</h3>
     <div class="order-address">
         <p>Address Delivery</p>
@@ -140,41 +140,46 @@
         <span > ➤2km </span>
     </div>
     <div class="order-wrapper">
-        <div class="order-card">
-            <img class="order-image" src="./assets/burger.jpg" alt="Order Image">
-            <div class="order-details">
-                <p>lorem ipsum dolor sit amet</p>
-                <i></i><input type="text" value="1">
+            <div class="order-card">
+                <img class="order-image" src="./assets/burger.jpg" alt="Order Image">
+                <div class="order-details">
+                    <p>Lamb</p>
+                    </i><input type="text" value="1">
+                </div>
+                <h4 class="order-price">Rs:110</h4>
             </div>
-            <h4 class="order-price">Rs:110</h4>
-        </div>
-    </div>
-    <div class="order-wrapper">
-        <div class="order-card">
-            <img class="order-image" src="./assets/chicken.jpg" alt="Order Image">
-            <div class="order-details">
-                <p>lorem ipsum dolor sit amet</p>
-                <i></i><input type="text" value="1">
+            <div class="order-card">
+                <img class="order-image" src="./assets/chicken.jpg" alt="Order Image">
+                <div class="order-details">
+                    <p>Curry Recipe</p>
+                    <input type="text" value="1">
+                </div>
+                <h4 class="order-price">Rs:420</h4>
             </div>
-            <h4 class="order-price">Rs:420</h4>
-        </div>
-    </div>
-    <div class="order-wrapper">
-        <div class="order-card">
-            <img class="order-image" src="./assets/Briyani.avif" alt="Order Image">
-            <div class="order-details">
-                <p>lorem ipsum dolor sit amet</p>
-                <i></i><input type="text" value="1">
+            <div class="order-card">
+                <img class="order-image" src="./assets/Briyani.avif" alt="Order Image">
+                <div class="order-details">
+                    <p>Chicken</p>
+                    <input type="text" value="1">
+                </div>
+                <h4 class="order-price">Rs:210</h4>
             </div>
-            <h4 class="order-price">Rs:210</h4>
+     </div>
+     <hr class="divider">
+     <div class="order-total">
+        
+        <p>Subtotal <span>Rs:740</span></p>
+        <p>Tax (10%) <span>Rs:74</Rs:74></span></p>    
+        <p>Delivery fee <span>Rs:50</span></p>
+
+        <div class="order-promo">
+            <input class="input-promo" type="text" placeholder="Apply Voucher">
+            <button class="button-promo">Find Promo</button>
         </div>
+        <hr class="divider">
+        <p>total <span>Rs:864</span></p>
     </div>
-    <hr class="divider">
-    <div class="order-total">
-        <p>Subtotal <span>Rs:156</span></p>
-        <p>Tax (10%)<span>Rs:15.6</span></p>
-        <p>Delivery Fee <span>Rs:30</span></p>
-    </div>
- </div>
+    <button class="checkout">Checkout</button>
+</div>
 </body>
 </html>
