--- a/night.html
+++ b/night.html
@@ -61,17 +61,33 @@
     </div>
     </div>
     <div id="menu">
-        <h1 id="section">MENU</h1>
+        <h1 id="section">MENU <span style="color: red;">ORDER</span></h1>
         <div id="menu-row">
             <div id="menu-col">
                 <h2>MORNING&EVENING</h2>
+                <div class="align">
+                <div class="box">
+                    <div id="image">
+                        <img src="./assets/coffee2 (1).jpg">
+                    </div>
+                    <h3>cash</h3>
+                    <h4>&#8377 110</h4>
+                </div>
                 <div class="box">
                     <div id="image">
                         <img src="./assets/flat-white.jpg">
                     </div>
                     <h3>cash</h3>
-                    <h4>10$</h4>
+                    <h4>&#8377 120</h4>
                 </div>
+                <div class="box">
+                    <div id="image">
+                        <img src="./assets/coffee2 (2).jpg">
+                    </div>
+                    <h3>cash</h3>
+                    <h4>&#8377 140</h4>
+                </div>
+            </div>
             </div>
         </div>
 
